samples/_failures_safe/1761720136_aaacbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6655c45.c: In function ‘main’:
./samples/SAFE/__tmp_c6655c45.c:126:5: error: expected expression at end of input
  126 |     set_element(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_c6655c45.c:126:5: error: too few arguments to function ‘set_element’
./samples/SAFE/__tmp_c6655c45.c:40:5: note: declared here
   40 | int set_element(struct Matrix *mat, size_t row, size_t col, double value) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_c6655c45.c:126:5: error: expected declaration or statement at end of input
  126 |     set_element(&
      |     ^~~~~~~~~~~
